# nothing

./: .gitignore  README.md  commands.sh  install_miniconda.sh  monitor.sh  upload_to_hf.py
Rebuttal_VLM2Vec_Matryoshka/: .gitignore  README.md  copy_res.py  download.py  download_traindata_2.sh  eval.sh  eval2.sh  eval3.sh  eval4.sh  eval5.sh  eval6.sh  eval7.sh  eval8.sh  eval_mmeb.py  eval_vqa.sh  eval_vqa2.sh  eval_vqa3.sh  eval_vqa4.sh  fix_lib.py  prepare_one_model_training.py  project_commands.bash  requirements.txt  train_ddp_one_model.py  train_scripts.sh
Rebuttal_VLM2Vec_Matryoshka/eval_scripts/: fastvlm_mrl_vqa.sh  qwen3_vl_mrl_vqa.sh
Rebuttal_VLM2Vec_Matryoshka/script_train/: ablation.sh  fastvlm_adaptive_mrl_laplacian_only_stage1_cls.sh  fastvlm_adaptive_mrl_laplacian_only_stage1_vqa.sh  fastvlm_adaptive_mrl_projection_only_stage1_cls.sh  fastvlm_adaptive_mrl_projection_only_stage1_vqa.sh  fastvlm_adaptive_mrl_stage1_cls_0.5_0.1.sh  fastvlm_adaptive_mrl_stage1_cls_0.5_0.3.sh  fastvlm_adaptive_mrl_stage1_cls_0.5_0.5.sh  fastvlm_adaptive_mrl_stage1_cls_0.7_0.1.sh  fastvlm_adaptive_mrl_stage1_cls_0.7_0.3.sh  fastvlm_adaptive_mrl_stage1_cls_0.7_0.5.sh  fastvlm_adaptive_mrl_stage1_cls_1.0_0.1.sh  fastvlm_adaptive_mrl_stage1_cls_1.0_0.5.sh  fastvlm_adaptive_mrl_stage1_cls_best.sh  fastvlm_adaptive_mrl_stage1_ret.sh  fastvlm_adaptive_mrl_stage1_vqa.sh  fastvlm_adaptive_mrl_stage1_vqa_best.sh  fastvlm_adaptive_router_stage2_vqa.sh  fastvlm_adaptive_router_stage2_vqa_best.sh  fastvlm_base_mrl_cls.sh  fastvlm_base_mrl_vqa.sh  fastvlm_ese_vqa.sh  qwen2vl_adaptive_mrl_stage1_cls.sh  qwen2vl_adaptive_mrl_stage1_ret.sh  qwen2vl_adaptive_mrl_stage1_vqa.sh  qwen3vl_adaptive_mrl_laplacian_only_stage1_cls.sh  qwen3vl_adaptive_mrl_laplacian_only_stage1_vqa.sh  qwen3vl_adaptive_mrl_projection_only_stage1_cls.sh  qwen3vl_adaptive_mrl_projection_only_stage1_vqa.sh  qwen3vl_adaptive_mrl_stage1_cls.sh  qwen3vl_adaptive_mrl_stage1_ret.sh  qwen3vl_adaptive_mrl_stage1_vqa.sh  qwen3vl_adaptive_router_stage2_vqa.sh  qwen3vl_all.sh  qwen3vl_base_mrl_cls.sh  qwen3vl_base_mrl_vqa.sh  qwen3vl_ese_vqa.sh
Rebuttal_VLM2Vec_Matryoshka/src/: arguments.py  distiller.py  trainer.py
ai-tutor-training/: eval_v2.py  install.sh  project_commands.sh  pyproject.toml  run.sh  start_rl_training.sh  start_vllm_server.sh  stop_vllm_server.sh  train_rl.py  vllm_server.py
ai-tutor-training/config/: eval.py  train_rl_model.py
ai-tutor-training/config/deepspeed/: zero2_8GPU.yaml
ai-tutor-training/config/eval/: eval_v2.yaml
ai-tutor-training/config/train_rl/: qwen3.5_9b.yaml
ai-tutor-training/data/datasets/: train.jsonl
ai-tutor-training/data/example/: vi_gsm8k_test.jsonl
ai-tutor-training/prompt_templates/: initial_attempt_wrapper_prompt.txt  student_attempt_prompt.txt  student_final_prompt.txt  student_initial_attempt_prompt.txt  teacher_prompt.txt
ai-tutor-training/prompt_templates/judges/: does_not_leak_answer.txt  follows_pedagogical_values.txt
ai-tutor-training/prompt_templates/judges_v2/: accuracy_safety.txt  empathy_encouragement.txt  hint_quality.txt  leak_answer.txt  misconception_diagnosis.txt  style.txt
ai-tutor-training/prompt_templates/personas/: simple_student.txt
ai-tutor-training/src/: classroom.py
ai-tutor-training/src/grpo/: config.py  trainer.py
ai-tutor-training/src/inference_providers/: customed_api_inference.py  gemini_api_inference.py  open_router_inference.py
ai-tutor-training/src/utils/: tele_bot.py  utils.py
ai-tutor-training/src/vllm/: client.py  data_parallel_vllm.py
ai-tutor-training/utils/: data.py
ark/: README.md  ablation_distillation.sh  ablation_eval.sh  ablation_reg.sh  ablation_sink_threshold.sh  evaluation.py  llama.sh  llama_tune_3.sh  llama_tune_4.sh  longbench.sh  project_commands.sh  pyproject.toml  qwen.sh  qwen_4b.sh  requirements.txt
ark/scripts/: eval.sh  llama_tune.sh  llama_tune_2.sh  train.sh
ark/src/octopus/: cache_utils.py  cache_utils_pruned.py  data.py  train.py  utils.py  var.py
ark/src/octopus/models/llama/: attention.py  configuration_octopus_llama.py  modeling_octopus_llama.py
ark/src/octopus/models/qwen3/: attention.py  configuration_octopus_qwen3.py  modeling_octopus_qwen3.py
ark/src/optopus.egg-info/: PKG-INFO  SOURCES.txt
text2sql_distillation_draft/: .gitignore  README.md  arguments.py  eval.sh  infer.py  infer_command.sh  process_data.py  project_commands.sh  project_commands_ablation.sh  project_commands_agent.sh  project_commands_kid.sh  project_commands_llama.sh  project_commands_new.sh  pyproject.toml  requirements.txt  rouge_metric.py  running.sh  split_data.py  upload_to_hf.py  utils.py
(+395 files in other folders)
