[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optopus"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"

authors = []

dependencies = [
    "absl-py==2.4.0",
    "accelerate==1.13.0",
    "activations==0.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.2.25",
    "chardet==5.2.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "colorama==0.4.6",
    "dataproperty==1.1.0",
    "datasets==4.8.3",
    "dill==0.4.0",
    "einops==0.8.2",
    "evaluate==0.4.6",
    "filelock==3.25.2",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.11.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonlines==4.0.0",
    "lm-eval==0.4.11",
    "lxml==6.1.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mbstrdecoder==1.1.4",
    "mdurl==0.1.2",
    "more-itertools==11.0.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.16",
    "networkx==3.6.1",
    "nltk==3.9.4",
    "numpy==2.4.4",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu12==12.8.90",
    "packaging==26.1",
    "pandas==3.0.2",
    "pathvalidate==3.3.1",
    "peft==0.19.1",
    "platformdirs==4.9.6",
    "portalocker==3.2.0",
    "propcache==0.4.1",
    "protobuf==7.34.1",
    "psutil==7.2.2",
    "pyarrow==23.0.1",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pygments==2.20.0",
    "pytablewriter==1.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rich==15.0.0",
    "rouge-score==0.1.2",
    "sacrebleu==2.6.0",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentry-sdk==2.58.0",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.3",
    "sqlitedict==2.1.0",
    "sympy==1.14.0",
    "tabledata==1.3.4",
    "tabulate==0.10.0",
    "tcolorpy==0.1.7",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.8.0+cu128",
    "tqdm==4.67.3",
    "transformers==5.5.4",
    "triton==3.4.0",
    "typepy==1.3.4",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "word2number==1.1",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zstandard==0.25.0",
    "rouge",
    "jieba",
    "fuzzywuzzy",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
